Flowplayer Core CSS - fix for the invisible menu leakage

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -787,7 +787,8 @@
     bottom: -100%;
     height: 0;
     filter: alpha(opacity=0) !important;
-    opacity: 0 !important; }
+    opacity: 0 !important;
+    visibility: hidden }
     .flowplayer .fp-menu.fp-active {
       -webkit-transform: scale(1);
           -ms-transform: scale(1);
@@ -795,7 +796,8 @@
       height: auto;
       bottom: 3.2em;
       filter: alpha(opacity=100) !important;
-      opacity: 1 !important; }
+      opacity: 1 !important;
+      visibility: visible }
 	.flowplayer.fixed-controls .fp-menu.fp-active {
 		bottom: .2em;
 	}
